# giba-bank

./: .gitignore  Docker DB.postman_environment.json  Dockerfile  Giba Bank.postman_collection.json  README.md  docker-compose.yml  package-lock.json
.github/workflows/: ci.yml
gibabank-backend/: Cargo.toml
gibabank-backend/.sqlx/: query-0657d203314a17ef11adabe4d8225fa6a610b5378ee876daaa6b5d140614f4c6.json  query-1b5387a912a404538e78edd294ae4aeb56ffc6c05e7b1204c0c0ef6f1b6126ed.json  query-43a8ef6d842906934a53083722610722c7b1e2438ae20a27ab7ed3df27d84fe5.json  query-65eb17ac12d6e671226ca5daf34b381ff4fe585a201ec2198ca65b49862df1b8.json  query-80a12a0b16152fdb7b1359e8b0f1a8ccbd6c072ab1fbc5b967d060c26a03fb94.json  query-8397507f17afe169f982542d90c5039f4759dd0c57357b373286a1abd659915a.json  query-9baff0008776dbe8edbb6e2492bdf7fc60b4ddb5dad13d16e61de42635656f6a.json  query-b1482a383d3111f4d6135cc58daef7f87efe4c2cc6dcf8bb326f94fdaad493f6.json  query-b1e097b9ec5a1de5e932baa1014cfb23d2741b4e5c0ae0c095bc7ffc2da33260.json  query-b41d2558f1cc4d9ec95c8f2d6a394029ba04c28975df07c31cad7887327d4e06.json  query-e01d36083d37038bdd9a02ebda8aefdd14f860bacd9e32515fac892b9b6d98f5.json  query-e67d85051c6ba4be5b612b1b56efc666282ba852830288bae991ab1de9f7f67f.json  query-edddb8f3096d7a649819f4aa9c08ae81b476062d3dbc5768d2e192e7762b4f3d.json
gibabank-backend/migrations/: 20260322121515_create_accounts.sql  20260322135734_001_create_users.sql  20260322135843_001_create_account.sql  20260322162137_001_create_transactions.sql  20260322162218_001_create_addresses.sql
gibabank-backend/src/: main.rs
(+24 files in other folders)
