[package]
name = "gibabank-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework e Async runtime
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Banco de Dados
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid", "rust_decimal"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Finanças e Utilitários
rust_decimal = { version = "1.35", features = ["serde-float", "db-postgres"] }
rust_decimal_macros = "1.35"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"